# sih-webcam

./: .gitignore  CMakeLists.txt  OpenCV-webcam-test  main
src/: main  main.cpp
